parser.output
Rules useless in parser due to conflicts

   22 expresion: expresion MAS expresion
   23          | expresion MENOS expresion
   24          | expresion MUL expresion
   25          | expresion DIV expresion
   26          | LPAR expresion RPAR
   27          | NUMERO
   28          | ID
   29          | expresion MAS expresion
   30          | expresion MENOS expresion
   31          | expresion MUL expresion
   32          | expresion DIV expresion
   33          | LPAR expresion RPAR
   34          | NUMERO
   35          | ID
   36          | expresion MAS expresion
   37          | expresion MENOS expresion
   38          | expresion MUL expresion
   39          | expresion DIV expresion
   40          | LPAR expresion RPAR
   41          | NUMERO
   42          | ID


State 47 conflicts: 36 reduce/reduce
State 48 conflicts: 36 reduce/reduce
State 76 conflicts: 36 reduce/reduce
State 77 conflicts: 30 reduce/reduce
State 78 conflicts: 30 reduce/reduce
State 79 conflicts: 36 reduce/reduce
State 80 conflicts: 36 reduce/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 $@2: %empty

    3 program: $@1 declaraciones $@2 funcion
    4        | funcion

    5 declaraciones: declaraciones declaracion
    6              | declaracion

    7 $@3: %empty

    8 declaracion: type $@3 ID PYC

    9 type: INT

   10 funcion: VOID ID LPAR RPAR LKEY bloqueSentencias RKEY

   11 bloqueSentencias: sentencias
   12                 | %empty

   13 sentencias: sentencias sentencia
   14           | sentencia

   15 expresion: expresion MAS expresion
   16          | expresion MENOS expresion
   17          | expresion MUL expresion
   18          | expresion DIV expresion
   19          | LPAR expresion RPAR
   20          | NUMERO
   21          | ID
   22          | expresion MAS expresion
   23          | expresion MENOS expresion
   24          | expresion MUL expresion
   25          | expresion DIV expresion
   26          | LPAR expresion RPAR
   27          | NUMERO
   28          | ID
   29          | expresion MAS expresion
   30          | expresion MENOS expresion
   31          | expresion MUL expresion
   32          | expresion DIV expresion
   33          | LPAR expresion RPAR
   34          | NUMERO
   35          | ID
   36          | expresion MAS expresion
   37          | expresion MENOS expresion
   38          | expresion MUL expresion
   39          | expresion DIV expresion
   40          | LPAR expresion RPAR
   41          | NUMERO
   42          | ID

   43 condicion: condicion OR condicion
   44          | condicion AND condicion
   45          | expresion EQUAL expresion
   46          | expresion DISTINCT expresion
   47          | expresion GT expresion
   48          | expresion LT expresion
   49          | LPAR condicion RPAR

   50 $@4: %empty

   51 $@5: %empty

   52 $@6: %empty

   53 sentIf: IF LPAR $@4 condicion $@5 RPAR LKEY bloqueSentencias RKEY $@6 sentElse

   54 sentElse: ELSE LKEY bloqueSentencias RKEY
   55         | %empty

   56 $@7: %empty

   57 $@8: %empty

   58 $@9: %empty

   59 $@10: %empty

   60 sentWhile: WHILE LPAR $@7 condicion $@8 RPAR LKEY $@9 bloqueSentencias $@10 RKEY

   61 $@11: %empty

   62 sentAsig: ID $@11 ASIG expresion PYC

   63 $@12: %empty

   64 sentPutw: PUTW LPAR expresion $@12 RPAR PYC

   65 $@13: %empty

   66 sentPuts: PUTS LPAR STRING $@13 RPAR PYC

   67 $@14: %empty

   68 sentBreak: BREAK $@14 PYC

   69 sentencia: sentIf
   70          | sentWhile
   71          | sentAsig
   72          | sentPutw
   73          | sentPuts
   74          | sentBreak


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <std::string> (258) 8 10 21 28 35 42 62
    NUMERO <std::string> (259) 20 27 34 41
    STRING <std::string> (260) 66
    IF (261) 53
    ELSE (262) 54
    WHILE (263) 60
    PUTS (264) 66
    PUTW (265) 64
    BREAK (266) 68
    INT (267) 9
    VOID (268) 10
    LKEY (269) 10 53 54 60
    RKEY (270) 10 53 54 60
    PYC (271) 8 62 64 66 68
    ASIG (272) 62
    OR (273) 43
    AND (274) 44
    EQUAL (275) 45
    DISTINCT (276) 46
    LT (277) 48
    GT (278) 47
    MAS (279) 15 22 29 36
    MENOS (280) 16 23 30 37
    MUL (281) 17 24 31 38
    DIV (282) 18 25 32 39
    LPAR (283) 10 19 26 33 40 49 53 60 64 66
    RPAR (284) 10 19 26 33 40 49 53 60 64 66


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    program (31)
        on left: 3 4
        on right: 0
    $@1 (32)
        on left: 1
        on right: 3
    $@2 (33)
        on left: 2
        on right: 3
    declaraciones (34)
        on left: 5 6
        on right: 3 5
    declaracion (35)
        on left: 8
        on right: 5 6
    $@3 (36)
        on left: 7
        on right: 8
    type <int> (37)
        on left: 9
        on right: 8
    funcion (38)
        on left: 10
        on right: 3 4
    bloqueSentencias (39)
        on left: 11 12
        on right: 10 53 54 60
    sentencias (40)
        on left: 13 14
        on right: 11 13
    expresion <Expresion> (41)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 15 16 17 18 19 22 23 24 25 26 29 30 31 32 33 36 37 38 39 40 45 46 47 48 62 64
    condicion <Expresion> (42)
        on left: 43 44 45 46 47 48 49
        on right: 43 44 49 53 60
    sentIf (43)
        on left: 53
        on right: 69
    $@4 (44)
        on left: 50
        on right: 53
    $@5 (45)
        on left: 51
        on right: 53
    $@6 (46)
        on left: 52
        on right: 53
    sentElse (47)
        on left: 54 55
        on right: 53
    sentWhile (48)
        on left: 60
        on right: 70
    $@7 (49)
        on left: 56
        on right: 60
    $@8 (50)
        on left: 57
        on right: 60
    $@9 (51)
        on left: 58
        on right: 60
    $@10 (52)
        on left: 59
        on right: 60
    sentAsig (53)
        on left: 62
        on right: 71
    $@11 (54)
        on left: 61
        on right: 62
    sentPutw (55)
        on left: 64
        on right: 72
    $@12 (56)
        on left: 63
        on right: 64
    sentPuts (57)
        on left: 66
        on right: 73
    $@13 (58)
        on left: 65
        on right: 66
    sentBreak (59)
        on left: 68
        on right: 74
    $@14 (60)
        on left: 67
        on right: 68
    sentencia (61)
        on left: 69 70 71 72 73 74
        on right: 13 14


State 0

    0 $accept: • program $end

    VOID  shift, and go to state 1

    $default  reduce using rule 1 ($@1)

    program  go to state 2
    $@1      go to state 3
    funcion  go to state 4


State 1

   10 funcion: VOID • ID LPAR RPAR LKEY bloqueSentencias RKEY

    ID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    3 program: $@1 • declaraciones $@2 funcion

    INT  shift, and go to state 7

    declaraciones  go to state 8
    declaracion    go to state 9
    type           go to state 10


State 4

    4 program: funcion •

    $default  reduce using rule 4 (program)


State 5

   10 funcion: VOID ID • LPAR RPAR LKEY bloqueSentencias RKEY

    LPAR  shift, and go to state 11


State 6

    0 $accept: program $end •

    $default  accept


State 7

    9 type: INT •

    $default  reduce using rule 9 (type)


State 8

    3 program: $@1 declaraciones • $@2 funcion
    5 declaraciones: declaraciones • declaracion

    INT  shift, and go to state 7

    $default  reduce using rule 2 ($@2)

    $@2          go to state 12
    declaracion  go to state 13
    type         go to state 10


State 9

    6 declaraciones: declaracion •

    $default  reduce using rule 6 (declaraciones)


State 10

    8 declaracion: type • $@3 ID PYC

    $default  reduce using rule 7 ($@3)

    $@3  go to state 14


State 11

   10 funcion: VOID ID LPAR • RPAR LKEY bloqueSentencias RKEY

    RPAR  shift, and go to state 15


State 12

    3 program: $@1 declaraciones $@2 • funcion

    VOID  shift, and go to state 1

    funcion  go to state 16


State 13

    5 declaraciones: declaraciones declaracion •

    $default  reduce using rule 5 (declaraciones)


State 14

    8 declaracion: type $@3 • ID PYC

    ID  shift, and go to state 17


State 15

   10 funcion: VOID ID LPAR RPAR • LKEY bloqueSentencias RKEY

    LKEY  shift, and go to state 18


State 16

    3 program: $@1 declaraciones $@2 funcion •

    $default  reduce using rule 3 (program)


State 17

    8 declaracion: type $@3 ID • PYC

    PYC  shift, and go to state 19


State 18

   10 funcion: VOID ID LPAR RPAR LKEY • bloqueSentencias RKEY

    ID     shift, and go to state 20
    IF     shift, and go to state 21
    WHILE  shift, and go to state 22
    PUTS   shift, and go to state 23
    PUTW   shift, and go to state 24
    BREAK  shift, and go to state 25

    $default  reduce using rule 12 (bloqueSentencias)

    bloqueSentencias  go to state 26
    sentencias        go to state 27
    sentIf            go to state 28
    sentWhile         go to state 29
    sentAsig          go to state 30
    sentPutw          go to state 31
    sentPuts          go to state 32
    sentBreak         go to state 33
    sentencia         go to state 34


State 19

    8 declaracion: type $@3 ID PYC •

    $default  reduce using rule 8 (declaracion)


State 20

   62 sentAsig: ID • $@11 ASIG expresion PYC

    $default  reduce using rule 61 ($@11)

    $@11  go to state 35


State 21

   53 sentIf: IF • LPAR $@4 condicion $@5 RPAR LKEY bloqueSentencias RKEY $@6 sentElse

    LPAR  shift, and go to state 36


State 22

   60 sentWhile: WHILE • LPAR $@7 condicion $@8 RPAR LKEY $@9 bloqueSentencias $@10 RKEY

    LPAR  shift, and go to state 37


State 23

   66 sentPuts: PUTS • LPAR STRING $@13 RPAR PYC

    LPAR  shift, and go to state 38


State 24

   64 sentPutw: PUTW • LPAR expresion $@12 RPAR PYC

    LPAR  shift, and go to state 39


State 25

   68 sentBreak: BREAK • $@14 PYC

    $default  reduce using rule 67 ($@14)

    $@14  go to state 40


State 26

   10 funcion: VOID ID LPAR RPAR LKEY bloqueSentencias • RKEY

    RKEY  shift, and go to state 41


State 27

   11 bloqueSentencias: sentencias •
   13 sentencias: sentencias • sentencia

    ID     shift, and go to state 20
    IF     shift, and go to state 21
    WHILE  shift, and go to state 22
    PUTS   shift, and go to state 23
    PUTW   shift, and go to state 24
    BREAK  shift, and go to state 25

    $default  reduce using rule 11 (bloqueSentencias)

    sentIf     go to state 28
    sentWhile  go to state 29
    sentAsig   go to state 30
    sentPutw   go to state 31
    sentPuts   go to state 32
    sentBreak  go to state 33
    sentencia  go to state 42


State 28

   69 sentencia: sentIf •

    $default  reduce using rule 69 (sentencia)


State 29

   70 sentencia: sentWhile •

    $default  reduce using rule 70 (sentencia)


State 30

   71 sentencia: sentAsig •

    $default  reduce using rule 71 (sentencia)


State 31

   72 sentencia: sentPutw •

    $default  reduce using rule 72 (sentencia)


State 32

   73 sentencia: sentPuts •

    $default  reduce using rule 73 (sentencia)


State 33

   74 sentencia: sentBreak •

    $default  reduce using rule 74 (sentencia)


State 34

   14 sentencias: sentencia •

    $default  reduce using rule 14 (sentencias)


State 35

   62 sentAsig: ID $@11 • ASIG expresion PYC

    ASIG  shift, and go to state 43


State 36

   53 sentIf: IF LPAR • $@4 condicion $@5 RPAR LKEY bloqueSentencias RKEY $@6 sentElse

    $default  reduce using rule 50 ($@4)

    $@4  go to state 44


State 37

   60 sentWhile: WHILE LPAR • $@7 condicion $@8 RPAR LKEY $@9 bloqueSentencias $@10 RKEY

    $default  reduce using rule 56 ($@7)

    $@7  go to state 45


State 38

   66 sentPuts: PUTS LPAR • STRING $@13 RPAR PYC

    STRING  shift, and go to state 46


State 39

   64 sentPutw: PUTW LPAR • expresion $@12 RPAR PYC

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 50


State 40

   68 sentBreak: BREAK $@14 • PYC

    PYC  shift, and go to state 51


State 41

   10 funcion: VOID ID LPAR RPAR LKEY bloqueSentencias RKEY •

    $default  reduce using rule 10 (funcion)


State 42

   13 sentencias: sentencias sentencia •

    $default  reduce using rule 13 (sentencias)


State 43

   62 sentAsig: ID $@11 ASIG • expresion PYC

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 52


State 44

   53 sentIf: IF LPAR $@4 • condicion $@5 RPAR LKEY bloqueSentencias RKEY $@6 sentElse

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 53

    expresion  go to state 54
    condicion  go to state 55


State 45

   60 sentWhile: WHILE LPAR $@7 • condicion $@8 RPAR LKEY $@9 bloqueSentencias $@10 RKEY

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 53

    expresion  go to state 54
    condicion  go to state 56


State 46

   66 sentPuts: PUTS LPAR STRING • $@13 RPAR PYC

    $default  reduce using rule 65 ($@13)

    $@13  go to state 57


State 47

   21 expresion: ID •
   28          | ID •
   35          | ID •
   42          | ID •

    PYC       reduce using rule 21 (expresion)
    PYC       [reduce using rule 28 (expresion)]
    PYC       [reduce using rule 35 (expresion)]
    PYC       [reduce using rule 42 (expresion)]
    OR        reduce using rule 21 (expresion)
    OR        [reduce using rule 28 (expresion)]
    OR        [reduce using rule 35 (expresion)]
    OR        [reduce using rule 42 (expresion)]
    AND       reduce using rule 21 (expresion)
    AND       [reduce using rule 28 (expresion)]
    AND       [reduce using rule 35 (expresion)]
    AND       [reduce using rule 42 (expresion)]
    EQUAL     reduce using rule 21 (expresion)
    EQUAL     [reduce using rule 28 (expresion)]
    EQUAL     [reduce using rule 35 (expresion)]
    EQUAL     [reduce using rule 42 (expresion)]
    DISTINCT  reduce using rule 21 (expresion)
    DISTINCT  [reduce using rule 28 (expresion)]
    DISTINCT  [reduce using rule 35 (expresion)]
    DISTINCT  [reduce using rule 42 (expresion)]
    LT        reduce using rule 21 (expresion)
    LT        [reduce using rule 28 (expresion)]
    LT        [reduce using rule 35 (expresion)]
    LT        [reduce using rule 42 (expresion)]
    GT        reduce using rule 21 (expresion)
    GT        [reduce using rule 28 (expresion)]
    GT        [reduce using rule 35 (expresion)]
    GT        [reduce using rule 42 (expresion)]
    MAS       reduce using rule 21 (expresion)
    MAS       [reduce using rule 28 (expresion)]
    MAS       [reduce using rule 35 (expresion)]
    MAS       [reduce using rule 42 (expresion)]
    MENOS     reduce using rule 21 (expresion)
    MENOS     [reduce using rule 28 (expresion)]
    MENOS     [reduce using rule 35 (expresion)]
    MENOS     [reduce using rule 42 (expresion)]
    MUL       reduce using rule 21 (expresion)
    MUL       [reduce using rule 28 (expresion)]
    MUL       [reduce using rule 35 (expresion)]
    MUL       [reduce using rule 42 (expresion)]
    DIV       reduce using rule 21 (expresion)
    DIV       [reduce using rule 28 (expresion)]
    DIV       [reduce using rule 35 (expresion)]
    DIV       [reduce using rule 42 (expresion)]
    RPAR      reduce using rule 21 (expresion)
    RPAR      [reduce using rule 28 (expresion)]
    RPAR      [reduce using rule 35 (expresion)]
    RPAR      [reduce using rule 42 (expresion)]
    $default  reduce using rule 21 (expresion)


State 48

   20 expresion: NUMERO •
   27          | NUMERO •
   34          | NUMERO •
   41          | NUMERO •

    PYC       reduce using rule 20 (expresion)
    PYC       [reduce using rule 27 (expresion)]
    PYC       [reduce using rule 34 (expresion)]
    PYC       [reduce using rule 41 (expresion)]
    OR        reduce using rule 20 (expresion)
    OR        [reduce using rule 27 (expresion)]
    OR        [reduce using rule 34 (expresion)]
    OR        [reduce using rule 41 (expresion)]
    AND       reduce using rule 20 (expresion)
    AND       [reduce using rule 27 (expresion)]
    AND       [reduce using rule 34 (expresion)]
    AND       [reduce using rule 41 (expresion)]
    EQUAL     reduce using rule 20 (expresion)
    EQUAL     [reduce using rule 27 (expresion)]
    EQUAL     [reduce using rule 34 (expresion)]
    EQUAL     [reduce using rule 41 (expresion)]
    DISTINCT  reduce using rule 20 (expresion)
    DISTINCT  [reduce using rule 27 (expresion)]
    DISTINCT  [reduce using rule 34 (expresion)]
    DISTINCT  [reduce using rule 41 (expresion)]
    LT        reduce using rule 20 (expresion)
    LT        [reduce using rule 27 (expresion)]
    LT        [reduce using rule 34 (expresion)]
    LT        [reduce using rule 41 (expresion)]
    GT        reduce using rule 20 (expresion)
    GT        [reduce using rule 27 (expresion)]
    GT        [reduce using rule 34 (expresion)]
    GT        [reduce using rule 41 (expresion)]
    MAS       reduce using rule 20 (expresion)
    MAS       [reduce using rule 27 (expresion)]
    MAS       [reduce using rule 34 (expresion)]
    MAS       [reduce using rule 41 (expresion)]
    MENOS     reduce using rule 20 (expresion)
    MENOS     [reduce using rule 27 (expresion)]
    MENOS     [reduce using rule 34 (expresion)]
    MENOS     [reduce using rule 41 (expresion)]
    MUL       reduce using rule 20 (expresion)
    MUL       [reduce using rule 27 (expresion)]
    MUL       [reduce using rule 34 (expresion)]
    MUL       [reduce using rule 41 (expresion)]
    DIV       reduce using rule 20 (expresion)
    DIV       [reduce using rule 27 (expresion)]
    DIV       [reduce using rule 34 (expresion)]
    DIV       [reduce using rule 41 (expresion)]
    RPAR      reduce using rule 20 (expresion)
    RPAR      [reduce using rule 27 (expresion)]
    RPAR      [reduce using rule 34 (expresion)]
    RPAR      [reduce using rule 41 (expresion)]
    $default  reduce using rule 20 (expresion)


State 49

   19 expresion: LPAR • expresion RPAR
   26          | LPAR • expresion RPAR
   33          | LPAR • expresion RPAR
   40          | LPAR • expresion RPAR

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 58


State 50

   15 expresion: expresion • MAS expresion
   16          | expresion • MENOS expresion
   17          | expresion • MUL expresion
   18          | expresion • DIV expresion
   22          | expresion • MAS expresion
   23          | expresion • MENOS expresion
   24          | expresion • MUL expresion
   25          | expresion • DIV expresion
   29          | expresion • MAS expresion
   30          | expresion • MENOS expresion
   31          | expresion • MUL expresion
   32          | expresion • DIV expresion
   36          | expresion • MAS expresion
   37          | expresion • MENOS expresion
   38          | expresion • MUL expresion
   39          | expresion • DIV expresion
   64 sentPutw: PUTW LPAR expresion • $@12 RPAR PYC

    MAS    shift, and go to state 59
    MENOS  shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62

    $default  reduce using rule 63 ($@12)

    $@12  go to state 63


State 51

   68 sentBreak: BREAK $@14 PYC •

    $default  reduce using rule 68 (sentBreak)


State 52

   15 expresion: expresion • MAS expresion
   16          | expresion • MENOS expresion
   17          | expresion • MUL expresion
   18          | expresion • DIV expresion
   22          | expresion • MAS expresion
   23          | expresion • MENOS expresion
   24          | expresion • MUL expresion
   25          | expresion • DIV expresion
   29          | expresion • MAS expresion
   30          | expresion • MENOS expresion
   31          | expresion • MUL expresion
   32          | expresion • DIV expresion
   36          | expresion • MAS expresion
   37          | expresion • MENOS expresion
   38          | expresion • MUL expresion
   39          | expresion • DIV expresion
   62 sentAsig: ID $@11 ASIG expresion • PYC

    PYC    shift, and go to state 64
    MAS    shift, and go to state 59
    MENOS  shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62


State 53

   19 expresion: LPAR • expresion RPAR
   26          | LPAR • expresion RPAR
   33          | LPAR • expresion RPAR
   40          | LPAR • expresion RPAR
   49 condicion: LPAR • condicion RPAR

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 53

    expresion  go to state 65
    condicion  go to state 66


State 54

   15 expresion: expresion • MAS expresion
   16          | expresion • MENOS expresion
   17          | expresion • MUL expresion
   18          | expresion • DIV expresion
   22          | expresion • MAS expresion
   23          | expresion • MENOS expresion
   24          | expresion • MUL expresion
   25          | expresion • DIV expresion
   29          | expresion • MAS expresion
   30          | expresion • MENOS expresion
   31          | expresion • MUL expresion
   32          | expresion • DIV expresion
   36          | expresion • MAS expresion
   37          | expresion • MENOS expresion
   38          | expresion • MUL expresion
   39          | expresion • DIV expresion
   45 condicion: expresion • EQUAL expresion
   46          | expresion • DISTINCT expresion
   47          | expresion • GT expresion
   48          | expresion • LT expresion

    EQUAL     shift, and go to state 67
    DISTINCT  shift, and go to state 68
    LT        shift, and go to state 69
    GT        shift, and go to state 70
    MAS       shift, and go to state 59
    MENOS     shift, and go to state 60
    MUL       shift, and go to state 61
    DIV       shift, and go to state 62


State 55

   43 condicion: condicion • OR condicion
   44          | condicion • AND condicion
   53 sentIf: IF LPAR $@4 condicion • $@5 RPAR LKEY bloqueSentencias RKEY $@6 sentElse

    OR   shift, and go to state 71
    AND  shift, and go to state 72

    $default  reduce using rule 51 ($@5)

    $@5  go to state 73


State 56

   43 condicion: condicion • OR condicion
   44          | condicion • AND condicion
   60 sentWhile: WHILE LPAR $@7 condicion • $@8 RPAR LKEY $@9 bloqueSentencias $@10 RKEY

    OR   shift, and go to state 71
    AND  shift, and go to state 72

    $default  reduce using rule 57 ($@8)

    $@8  go to state 74


State 57

   66 sentPuts: PUTS LPAR STRING $@13 • RPAR PYC

    RPAR  shift, and go to state 75


State 58

   15 expresion: expresion • MAS expresion
   16          | expresion • MENOS expresion
   17          | expresion • MUL expresion
   18          | expresion • DIV expresion
   19          | LPAR expresion • RPAR
   22          | expresion • MAS expresion
   23          | expresion • MENOS expresion
   24          | expresion • MUL expresion
   25          | expresion • DIV expresion
   26          | LPAR expresion • RPAR
   29          | expresion • MAS expresion
   30          | expresion • MENOS expresion
   31          | expresion • MUL expresion
   32          | expresion • DIV expresion
   33          | LPAR expresion • RPAR
   36          | expresion • MAS expresion
   37          | expresion • MENOS expresion
   38          | expresion • MUL expresion
   39          | expresion • DIV expresion
   40          | LPAR expresion • RPAR

    MAS    shift, and go to state 59
    MENOS  shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62
    RPAR   shift, and go to state 76


State 59

   15 expresion: expresion MAS • expresion
   22          | expresion MAS • expresion
   29          | expresion MAS • expresion
   36          | expresion MAS • expresion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 77


State 60

   16 expresion: expresion MENOS • expresion
   23          | expresion MENOS • expresion
   30          | expresion MENOS • expresion
   37          | expresion MENOS • expresion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 78


State 61

   17 expresion: expresion MUL • expresion
   24          | expresion MUL • expresion
   31          | expresion MUL • expresion
   38          | expresion MUL • expresion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 79


State 62

   18 expresion: expresion DIV • expresion
   25          | expresion DIV • expresion
   32          | expresion DIV • expresion
   39          | expresion DIV • expresion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 80


State 63

   64 sentPutw: PUTW LPAR expresion $@12 • RPAR PYC

    RPAR  shift, and go to state 81


State 64

   62 sentAsig: ID $@11 ASIG expresion PYC •

    $default  reduce using rule 62 (sentAsig)


State 65

   15 expresion: expresion • MAS expresion
   16          | expresion • MENOS expresion
   17          | expresion • MUL expresion
   18          | expresion • DIV expresion
   19          | LPAR expresion • RPAR
   22          | expresion • MAS expresion
   23          | expresion • MENOS expresion
   24          | expresion • MUL expresion
   25          | expresion • DIV expresion
   26          | LPAR expresion • RPAR
   29          | expresion • MAS expresion
   30          | expresion • MENOS expresion
   31          | expresion • MUL expresion
   32          | expresion • DIV expresion
   33          | LPAR expresion • RPAR
   36          | expresion • MAS expresion
   37          | expresion • MENOS expresion
   38          | expresion • MUL expresion
   39          | expresion • DIV expresion
   40          | LPAR expresion • RPAR
   45 condicion: expresion • EQUAL expresion
   46          | expresion • DISTINCT expresion
   47          | expresion • GT expresion
   48          | expresion • LT expresion

    EQUAL     shift, and go to state 67
    DISTINCT  shift, and go to state 68
    LT        shift, and go to state 69
    GT        shift, and go to state 70
    MAS       shift, and go to state 59
    MENOS     shift, and go to state 60
    MUL       shift, and go to state 61
    DIV       shift, and go to state 62
    RPAR      shift, and go to state 76


State 66

   43 condicion: condicion • OR condicion
   44          | condicion • AND condicion
   49          | LPAR condicion • RPAR

    OR    shift, and go to state 71
    AND   shift, and go to state 72
    RPAR  shift, and go to state 82


State 67

   45 condicion: expresion EQUAL • expresion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 83


State 68

   46 condicion: expresion DISTINCT • expresion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 84


State 69

   48 condicion: expresion LT • expresion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 85


State 70

   47 condicion: expresion GT • expresion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 49

    expresion  go to state 86


State 71

   43 condicion: condicion OR • condicion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 53

    expresion  go to state 54
    condicion  go to state 87


State 72

   44 condicion: condicion AND • condicion

    ID      shift, and go to state 47
    NUMERO  shift, and go to state 48
    LPAR    shift, and go to state 53

    expresion  go to state 54
    condicion  go to state 88


State 73

   53 sentIf: IF LPAR $@4 condicion $@5 • RPAR LKEY bloqueSentencias RKEY $@6 sentElse

    RPAR  shift, and go to state 89


State 74

   60 sentWhile: WHILE LPAR $@7 condicion $@8 • RPAR LKEY $@9 bloqueSentencias $@10 RKEY

    RPAR  shift, and go to state 90


State 75

   66 sentPuts: PUTS LPAR STRING $@13 RPAR • PYC

    PYC  shift, and go to state 91


State 76

   19 expresion: LPAR expresion RPAR •
   26          | LPAR expresion RPAR •
   33          | LPAR expresion RPAR •
   40          | LPAR expresion RPAR •

    PYC       reduce using rule 19 (expresion)
    PYC       [reduce using rule 26 (expresion)]
    PYC       [reduce using rule 33 (expresion)]
    PYC       [reduce using rule 40 (expresion)]
    OR        reduce using rule 19 (expresion)
    OR        [reduce using rule 26 (expresion)]
    OR        [reduce using rule 33 (expresion)]
    OR        [reduce using rule 40 (expresion)]
    AND       reduce using rule 19 (expresion)
    AND       [reduce using rule 26 (expresion)]
    AND       [reduce using rule 33 (expresion)]
    AND       [reduce using rule 40 (expresion)]
    EQUAL     reduce using rule 19 (expresion)
    EQUAL     [reduce using rule 26 (expresion)]
    EQUAL     [reduce using rule 33 (expresion)]
    EQUAL     [reduce using rule 40 (expresion)]
    DISTINCT  reduce using rule 19 (expresion)
    DISTINCT  [reduce using rule 26 (expresion)]
    DISTINCT  [reduce using rule 33 (expresion)]
    DISTINCT  [reduce using rule 40 (expresion)]
    LT        reduce using rule 19 (expresion)
    LT        [reduce using rule 26 (expresion)]
    LT        [reduce using rule 33 (expresion)]
    LT        [reduce using rule 40 (expresion)]
    GT        reduce using rule 19 (expresion)
    GT        [reduce using rule 26 (expresion)]
    GT        [reduce using rule 33 (expresion)]
    GT        [reduce using rule 40 (expresion)]
    MAS       reduce using rule 19 (expresion)
    MAS       [reduce using rule 26 (expresion)]
    MAS       [reduce using rule 33 (expresion)]
    MAS       [reduce using rule 40 (expresion)]
    MENOS     reduce using rule 19 (expresion)
    MENOS     [reduce using rule 26 (expresion)]
    MENOS     [reduce using rule 33 (expresion)]
    MENOS     [reduce using rule 40 (expresion)]
    MUL       reduce using rule 19 (expresion)
    MUL       [reduce using rule 26 (expresion)]
    MUL       [reduce using rule 33 (expresion)]
    MUL       [reduce using rule 40 (expresion)]
    DIV       reduce using rule 19 (expresion)
    DIV       [reduce using rule 26 (expresion)]
    DIV       [reduce using rule 33 (expresion)]
    DIV       [reduce using rule 40 (expresion)]
    RPAR      reduce using rule 19 (expresion)
    RPAR      [reduce using rule 26 (expresion)]
    RPAR      [reduce using rule 33 (expresion)]
    RPAR      [reduce using rule 40 (expresion)]
    $default  reduce using rule 19 (expresion)


State 77

   15 expresion: expresion • MAS expresion
   15          | expresion MAS expresion •
   16          | expresion • MENOS expresion
   17          | expresion • MUL expresion
   18          | expresion • DIV expresion
   22          | expresion • MAS expresion
   22          | expresion MAS expresion •
   23          | expresion • MENOS expresion
   24          | expresion • MUL expresion
   25          | expresion • DIV expresion
   29          | expresion • MAS expresion
   29          | expresion MAS expresion •
   30          | expresion • MENOS expresion
   31          | expresion • MUL expresion
   32          | expresion • DIV expresion
   36          | expresion • MAS expresion
   36          | expresion MAS expresion •
   37          | expresion • MENOS expresion
   38          | expresion • MUL expresion
   39          | expresion • DIV expresion

    MUL  shift, and go to state 61
    DIV  shift, and go to state 62

    PYC       reduce using rule 15 (expresion)
    PYC       [reduce using rule 22 (expresion)]
    PYC       [reduce using rule 29 (expresion)]
    PYC       [reduce using rule 36 (expresion)]
    OR        reduce using rule 15 (expresion)
    OR        [reduce using rule 22 (expresion)]
    OR        [reduce using rule 29 (expresion)]
    OR        [reduce using rule 36 (expresion)]
    AND       reduce using rule 15 (expresion)
    AND       [reduce using rule 22 (expresion)]
    AND       [reduce using rule 29 (expresion)]
    AND       [reduce using rule 36 (expresion)]
    EQUAL     reduce using rule 15 (expresion)
    EQUAL     [reduce using rule 22 (expresion)]
    EQUAL     [reduce using rule 29 (expresion)]
    EQUAL     [reduce using rule 36 (expresion)]
    DISTINCT  reduce using rule 15 (expresion)
    DISTINCT  [reduce using rule 22 (expresion)]
    DISTINCT  [reduce using rule 29 (expresion)]
    DISTINCT  [reduce using rule 36 (expresion)]
    LT        reduce using rule 15 (expresion)
    LT        [reduce using rule 22 (expresion)]
    LT        [reduce using rule 29 (expresion)]
    LT        [reduce using rule 36 (expresion)]
    GT        reduce using rule 15 (expresion)
    GT        [reduce using rule 22 (expresion)]
    GT        [reduce using rule 29 (expresion)]
    GT        [reduce using rule 36 (expresion)]
    MAS       reduce using rule 15 (expresion)
    MAS       [reduce using rule 22 (expresion)]
    MAS       [reduce using rule 29 (expresion)]
    MAS       [reduce using rule 36 (expresion)]
    MENOS     reduce using rule 15 (expresion)
    MENOS     [reduce using rule 22 (expresion)]
    MENOS     [reduce using rule 29 (expresion)]
    MENOS     [reduce using rule 36 (expresion)]
    RPAR      reduce using rule 15 (expresion)
    RPAR      [reduce using rule 22 (expresion)]
    RPAR      [reduce using rule 29 (expresion)]
    RPAR      [reduce using rule 36 (expresion)]
    $default  reduce using rule 15 (expresion)


State 78
